--- a/src/dev.html
+++ b/src/dev.html
@@ -53,10 +53,11 @@
     <!-- Aviary - feather -->
     <script src="https://dme0ih8comzn4.cloudfront.net/js/feather.js"></script>
 
-    <script src="/media/js/l10n.js"></script>
     {% if compiled %}
+      <script src="/media/js/l10n.js"></script>
       <script src="/media/js/include.js" defer></script>
     {% else %}
+      <script src="/media/js/lib/core/l10n_init.js"></script>
       <script data-main="/media/js/main" src="/media/js/lib/require.js"></script>
     {% endif %}
   </body>
